@@ -26,11 +26,11 @@ Build-Depends: debhelper (>= 8.1.3~),
                libxrandr-dev (>= 2:1.2),
                gobject-introspection (>= 1.33.4-1~),
                libgirepository1.0-dev (>= 0.9.12)
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Vcs-Svn: svn://svn.debian.org/pkg-gnome/desktop/unstable/cogl
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/cogl/
 
-Package: libcogl15
+Package: libcogl20
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
@@ -63,7 +63,7 @@ Description: Object oriented GL/GLES Abstraction/Utility Layer (common files)
 Package: libcogl-dev
 Section: libdevel
 Architecture: any
-Depends: libcogl15 (= ${binary:Version}),
+Depends: libcogl20 (= ${binary:Version}),
          gir1.2-cogl-1.0 (= ${binary:Version}),
          libgl1-mesa-dev (>= 7.1~rc3-1~),
          libgles2-mesa-dev (>= 7.1~rc3-1~) [!hurd-any] | libgles2-dev [!hurd-any],
@@ -89,11 +89,11 @@ Description: Object oriented GL/GLES Abstraction/Utility Layer (development file
  .
  This package contains the development files for libcogl.
 
-Package: libcogl15-dbg
+Package: libcogl20-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: libcogl15 (= ${binary:Version}),
+Depends: libcogl20 (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
 Description: Object oriented GL/GLES Abstraction/Utility Layer (debug files)
@@ -130,7 +130,37 @@ Description: GObject introspection data for the Cogl 1.0 library
  It can be used by packages using the GIRepository format to generate
  dynamic bindings for libcogl.
 
-Package: libcogl-pango15
+Package: libcogl-path20
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+Recommends: libcogl-common
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
+Description: Object oriented GL/GLES Abstraction/Utility Layer
+ Cogl is a small open source library for using 3D graphics hardware to draw
+ pretty pictures. The API departs from the flat state machine style of
+ OpenGL and is designed to make it easy to write orthogonal components that
+ can render without stepping on each others toes.
+
+Package: libcogl-path-dev
+Section: libdevel
+Architecture: any
+Depends: libcogl-path20 (= ${binary:Version}),
+         libcogl-dev (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
+Recommends: pkg-config
+Suggests: libcogl-doc
+Description: Object oriented GL/GLES Abstraction/Utility Layer (development files)
+ Cogl is a small open source library for using 3D graphics hardware to draw
+ pretty pictures. The API departs from the flat state machine style of
+ OpenGL and is designed to make it easy to write orthogonal components that
+ can render without stepping on each others toes.
+ .
+ This package contains the development files for libcogl-path.
+
+Package: libcogl-pango20
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
@@ -146,7 +176,7 @@ Description: Object oriented GL/GLES Abstraction/Utility Layer
 Package: libcogl-pango-dev
 Section: libdevel
 Architecture: any
-Depends: libcogl-pango15 (= ${binary:Version}),
+Depends: libcogl-pango20 (= ${binary:Version}),
          gir1.2-coglpango-1.0 (= ${binary:Version}),
          libcogl-dev (= ${binary:Version}),
          libglib2.0-dev (>= 2.28.0),
@@ -171,11 +201,11 @@ Description: Object oriented GL/GLES Abstraction/Utility Layer (development file
  .
  This package contains the development files for libcogl-pango.
 
-Package: libcogl-pango15-dbg
+Package: libcogl-pango20-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: libcogl-pango15 (= ${binary:Version}),
+Depends: libcogl-pango20 (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
 Description: Object oriented GL/GLES Abstraction/Utility Layer (debug files)
@@ -199,7 +229,7 @@ Description: GObject introspection data for the CoglPango 1.0 library
  It can be used by packages using the GIRepository format to generate
  dynamic bindings for libcogl-pango.
 
-Package: libcogl-gles2-15
+Package: libcogl-gles2-20
 Architecture: linux-any kfreebsd-any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
@@ -221,7 +251,7 @@ Description: Object oriented GL/GLES Abstraction/Utility Layer
 Package: libcogl-gles2-dev
 Section: libdevel
 Architecture: linux-any kfreebsd-any
-Depends: libcogl-gles2-15 (= ${binary:Version}),
+Depends: libcogl-gles2-20 (= ${binary:Version}),
          libcogl-dev (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
