@@ -1,5 +1,6 @@
 cogl (1.17.4-1) UNRELEASED; urgency=medium
 
+  [ Andreas Henriksson ]
   * New upstream release.
   * Rename package for new soname (15->20)
   * Update symbols file
@@ -12,6 +13,9 @@ cogl (1.17.4-1) UNRELEASED; urgency=medium
     - since debian/* uses LGPL - add debian/patches/* using MIT, even though
       it doesn't (yet) exist, to avoid future problems submitting patches
       upstream that doesn't have an explicit license tag.
+
+  [ Emilio Pozuelo Monfort ]
+  * Split libcogl-path into its own package.
 
  -- Andreas Henriksson <andreas@fatal.se>  Tue, 04 Mar 2014 21:30:49 +0100
 
